// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FluidImage - FluidImage functional behaviour it reloads \`<Image />\` if resized with 0 from prop list 1`] = `
Object {
  "hasImageLoaded": true,
  "hasThumbnailLoaded": true,
}
`;

exports[`FluidImage - FluidImage functional behaviour it reloads \`<Image />\` if resized with 0 from prop list 2`] = `
Object {
  "hasImageLoaded": false,
  "hasThumbnailLoaded": true,
}
`;

exports[`FluidImage - FluidImage functional behaviour it reloads \`<Image />\` if resized with 1 from prop list 1`] = `
Object {
  "hasImageLoaded": true,
  "hasThumbnailLoaded": true,
}
`;

exports[`FluidImage - FluidImage functional behaviour it reloads \`<Image />\` if resized with 1 from prop list 2`] = `
Object {
  "hasImageLoaded": false,
  "hasThumbnailLoaded": true,
}
`;

exports[`FluidImage - FluidImage functional behaviour it sets the expected state when \`<Image />\` has loaded with 0 from prop list 1`] = `
Object {
  "hasImageLoaded": true,
  "hasThumbnailLoaded": true,
}
`;

exports[`FluidImage - FluidImage functional behaviour it sets the expected state when \`<Image />\` has loaded with 1 from prop list 1`] = `
Object {
  "hasImageLoaded": true,
  "hasThumbnailLoaded": true,
}
`;

exports[`FluidImage - FluidImage functional behaviour it sets the expected state when \`<Thumbnail />\` has loaded with 0 from prop list 1`] = `
Object {
  "hasImageLoaded": false,
  "hasThumbnailLoaded": true,
}
`;

exports[`FluidImage - FluidImage functional behaviour it sets the expected state when \`<Thumbnail />\` has loaded with 1 from prop list 1`] = `
Object {
  "hasImageLoaded": false,
  "hasThumbnailLoaded": true,
}
`;

exports[`FluidImage - FluidImage render skeletons it renders with 0 from prop list 1`] = `
<span
  style={
    Object {
      "backgroundColor": "#f9f9f9",
      "display": "inline-block",
      "height": 0,
      "lineHeight": 0,
      "overflow": "hidden",
      "paddingBottom": "100%",
      "position": "relative",
      "width": "100%",
    }
  }
>
  <span
    style={
      Object {
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <img
      alt={undefined}
      draggable={false}
      onLoad={[Function]}
      src="testImage.jpeg?fit=crop&w=8&h=NaN&dpr=1&q=80&rect=0,0,100,100"
      style={
        Object {
          "height": "auto",
          "opacity": 0,
          "position": "absolute",
          "transition": "opacity 0.6s",
          "width": "100%",
          "zIndex": 0,
        }
      }
      title={undefined}
    />
  </span>
</span>
`;

exports[`FluidImage - FluidImage render skeletons it renders with 1 from prop list 1`] = `
<span
  style={
    Object {
      "backgroundColor": "red",
      "display": "inline-block",
      "height": "100%",
      "lineHeight": 0,
      "overflow": "hidden",
      "paddingBottom": 0,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <span
    style={
      Object {
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <img
      alt="an image"
      draggable={false}
      onLoad={[Function]}
      src="thumbnail-url-pattern"
      style={
        Object {
          "height": "auto",
          "opacity": 0,
          "position": "absolute",
          "transition": "opacity 0.6s",
          "width": "100%",
          "zIndex": 0,
        }
      }
      title="an image"
    />
  </span>
</span>
`;
